fixing the alignment of the header grid

--- a/29-grid-portfolio/css/components/header.css
+++ b/29-grid-portfolio/css/components/header.css
@@ -3,6 +3,7 @@ body > header {
   grid-template-columns: repeat(6, 145px);
   column-gap: 15px;
   row-gap: 30px;
+  align-items: end;
 }
 
 body > header h1 {
